# uglyengine

./: CMakeLists.txt  LICENSE  README.md
include/: Application.h  Core.h  Engine.h  InputButton.h  InputManager.h  InputStats.h  UglyEngine.h  VulkanManager.h  config.h  config.h.in
src/: Application.cpp  Engine.cpp  InputButton.cpp  InputManager.cpp  LogFormatter.cpp  LogFormatter.h  VulkanManager.cpp
tests/: CMakeLists.txt
tests/t00-SimpleWindow/: CMakeLists.txt
tests/t00-SimpleWindow/src/: config.h  config.h.in  main.cpp
